# SQL_ER

./: .gitignore  00_序章.sql  01_サブクエリ・パラノイア.sql  02_冗長性症候群.sql  03_ループ依存症.sql  04_スーパーソルジャー病.sql  05_時代錯誤症候群.sql  06_ロックイン病.sql  07_グレーノウハウ.sql  08_カルテ2のテストデータ.sql  08_集合指向アレルギー.sql  09_リレーショナル原理主義.sql  10_更新時合弁症.sql  12_演習解答.sql  CLAUDE.md  README.md  compose.yml  pyproject.toml
Pythonのサンプルコード/: 03_Python_1.py  03_Python_2.py  03_Python_3.py  08_Python.py
src/: 00_introduction.py  01_subquery_paranoia.py  02_redundancy_syndrome.py  03_loop_dependency.py  04_super_soldier_syndrome.py  05_anachronism_syndrome.py  06_lock_in_syndrome.py  08_set_oriented_allergy.py  summary_implementation.py
